# criterion.rs

./: Cargo.toml  search-index.js
book/: analysis.html  criterion_rs.html  faq.html  getting_started.html  index.html  print.html
book/user_guide/: benchmarking_with_inputs.html  command_line.html  comparing_functions.html  external_programs.html  html_report.html  migrating_from_libtest.html  plots_and_graphs.html  user_guide.html
criterion/: enum.AxisScale.html  enum.Throughput.html  fn.black_box.html  fn.init_logging.html  index.html  macro.criterion_group.html  macro.criterion_main.html  struct.Bencher.html  struct.Benchmark.html  struct.Criterion.html  struct.Fun.html  struct.ParameterizedBenchmark.html  struct.PlotConfiguration.html  trait.BenchmarkDefinition.html
criterion_plot/: enum.Axes.html  enum.Axis.html  enum.Color.html  enum.Grid.html  enum.LineType.html  enum.PointType.html  enum.Range.html  enum.Scale.html  enum.Terminal.html  fn.version.html  index.html  struct.BoxWidth.html  struct.Figure.html  struct.Font.html  struct.FontSize.html  struct.Key.html  struct.Label.html  struct.LineWidth.html  struct.Opacity.html  struct.Output.html  struct.PointSize.html  struct.ScaleFactor.html  struct.Size.html  struct.TicLabels.html  struct.Title.html
criterion_plot/axis/: index.html  struct.Properties.html
criterion_plot/candlestick/: index.html  struct.Candlesticks.html
criterion_plot/curve/: enum.Curve.html  index.html
criterion_plot/errorbar/: enum.ErrorBar.html  (+2 more)
criterion_stats/: enum.Tails.html  index.html  struct.Distribution.html
src/: benchmark.rs  lib.rs  metrics.rs  program.rs  report.rs  routine.rs
stats/: Cargo.toml
tests/: criterion_tests.rs
(+106 files in other folders)
