[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>", "Brook Heisler <brookheisler@gmail.com>"]
name = "criterion"
version = "0.2.1"
autobenches = false

description = "Statistics-driven micro-benchmarking library"
homepage = "https://japaric.github.io/criterion.rs/book/index.html"
repository = "https://github.com/japaric/criterion.rs"
readme = "README.md"
keywords = ["criterion", "benchmark"]
categories = ["development-tools::profiling"]
license = "Apache-2.0/MIT"

[dependencies]
criterion-plot = { path="plot", version="0.2.1", optional = true }
criterion-stats = { path="stats", version="0.2.1" }
failure = "0.1.1"
failure_derive = "0.1.1"
itertools = "0.7"
itertools-num = "0.1"
log = "0.4"
simplelog = "^0.5.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
atty = "0.2"
clap = "2"
handlebars = { version = "0.31", optional = true }

[target.'cfg(target_os = "linux")'.dependencies.perf_events]
git = "https://github.com/anp/perf_events"
rev = "6df5c83bbc11c720ba8df055e293f5f8696a92c5"
optional = true

[dev-dependencies]
walkdir = "2.1"
tempdir = "0.3"

[badges]
travis-ci = { repository = "japaric/criterion.rs" }
appveyor = { repository = "japaric/criterion.rs", id = "4255ads9ctpupcl2" }
coveralls = { repository = "japaric/criterion.rs" }
maintenance = { status = "actively-developed" }

[features]
real_blackbox = []
pmu = ["perf_events"]
html_reports = ["handlebars", "criterion-plot"]
default = ["html_reports"]

# NOTE(anp): disabling to be able to compile as a submodule
# [workspace]

[[bench]]
name = "bench_main"
harness = false

[lib]
bench = false
